--- a/py_dev/srv/templates/index.html
+++ b/py_dev/srv/templates/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>/</title>
     <style>
-      :root {
-        white-space: pre-wrap;
-        font-family: monospace;
-      }
+      {% include "site.css" %}
     </style>
   </head>
   <body>
@@ -16,16 +13,18 @@
       <thead>
         <tr>
           <th>Name</th>
+          <th>Type</th>
           <th>Size</th>
           <th>M-Time</th>
         </tr>
       </thead>
       <tbody>
-        {% for NAME, PATH, SIZE, MTIME in PATHS %}
+        {% for NAME, PATH, TYPE, SIZE, MTIME in PATHS %}
         <tr>
           <td>
             <a rel="noreferrer" href="{{ PATH }}">{{ NAME | e }}</a>
           </td>
+          <td>{{ TYPE or "" }}</td>
           <td>{{ SIZE }}</td>
           <td>{{ MTIME }}</td>
         </tr>
