--- a/py_dev/srv/templates/site.css
+++ b/py_dev/srv/templates/site.css
@@ -5,3 +5,12 @@
 tbody tr:nth-child(even) {
   background-color: rgb(240, 240, 240);
 }
+
+th {
+  text-align: left;
+  padding-left: 1em;
+}
+
+td {
+  padding-right: 2em;
+}
