--- a/py_dev/srv/templates/site.css
+++ b/py_dev/srv/templates/site.css
@@ -3,7 +3,7 @@
   box-sizing: content-box;
 }
 
-tbody tr:nth-child(even) {
+tbody tr:nth-child(odd) {
   background-color: rgb(240, 240, 240);
 }
 
